# 01-ad-de

./: README.md  pyproject.toml  requirements.txt
notebooks/: 0. Introduction.ipynb  1. Our Setup.ipynb  2. Problem and Data.ipynb  3. A Formalization for Anomaly Detection.ipynb  4. KDE for Anomaly Detection.ipynb  5. Sliding Windows.ipynb  6. Sequence Input in KDE.ipynb  7. Time-Dependent Estimator.ipynb  8. Time-Indexed Models.ipynb  rise.css
